samples/_failures_safe/1761688190_0d73b0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d4de25ed.c: In function ‘main’:
./samples/SAFE/__tmp_d4de25ed.c:157:12: error: missing terminating " character
  157 |     printf("Available events: start, pause, resume,
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_d4de25ed.c:157:5: error: expected expression at end of input
  157 |     printf("Available events: start, pause, resume,
      |     ^~~~~~
./samples/SAFE/__tmp_d4de25ed.c:157:5: error: expected declaration or statement at end of input
